--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World...hello!
+<html>
+
+<head>
+    <title>Lucille</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <script type="text/javascript" src="vendor/jquery.js"></script>
+    <script type="text/javascript" src="scripts/pubsub.js"></script>
+    <script type="text/javascript" src="scripts/router.js"></script>
+    <script type="text/javascript" src="scripts/model.js"></script>
+    <script type="text/javascript" src="scripts/modelCollection.js"></script>
+    <script type="text/javascript" src="scripts/view.js"></script>
+    <script type="text/javascript" src="scripts/viewCollection.js"></script>
+    <script type="text/javascript" src="scripts/app.js"></script>
+    <script type="text/javascript" src="scripts/controller.js"></script>
+</head>
+
+<body>
+    <script type="text/javascript" src="scripts/kordfu.js"></script>
+</body>
+
+</html>
