--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Lucille</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <script type="text/javascript" src="vendor/jquery.js"></script>
+    <script type="text/javascript" src="scripts/errors.js"></script>
     <script type="text/javascript" src="scripts/pubsub.js"></script>
     <script type="text/javascript" src="scripts/router.js"></script>
     <script type="text/javascript" src="scripts/model.js"></script>
@@ -15,7 +16,14 @@
 </head>
 
 <body>
+
+    <div id="page"></div>
+    <a href="#">home</a>
+    <a href="#/page/one">one</a>
+    <a href="#/page/two">two</a>
+    <a href="#/page_three">three</a>
     <script type="text/javascript" src="scripts/kordfu.js"></script>
+
 </body>
 
 </html>
