--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -8,29 +8,26 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0/jasmine.css">
 
   <!-- testing libs -->
+  <script type="text/javascript" src="../vendor/jquery.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.0/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../scripts/pubsub.js"></script>
-  <script type="text/javascript" src="../scripts/router.js"></script>
-  <script type="text/javascript" src="../scripts/controller.js"></script>
-  <script type="text/javascript" src="../scripts/model.js"></script>
-  <script type="text/javascript" src="../scripts/modelCollection.js"></script>
-  <script type="text/javascript" src="../scripts/view.js"></script>
-  <script type="text/javascript" src="../scripts/viewCollection.js"></script>
-  <script type="text/javascript" src="../scripts/app.js"></script>
+  <script type="text/javascript" src="../scripts/core/pubsub.js"></script>
+  <script type="text/javascript" src="../scripts/core/router.js"></script>
+  <script type="text/javascript" src="../scripts/core/controller.js"></script>
+  <script type="text/javascript" src="../scripts/core/model.js"></script>
+  <script type="text/javascript" src="../scripts/core/view.js"></script>
+  <script type="text/javascript" src="../scripts/core/app.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/pubsubSpec.js"></script>
-  <script type="text/javascript" src="spec/routerSpec.js"></script>
-  <script type="text/javascript" src="spec/controllerSpec.js"></script>
-  <script type="text/javascript" src="spec/appSpec.js"></script>
-  <script type="text/javascript" src="spec/modelSpec.js"></script>
-  <script type="text/javascript" src="spec/modelCollectionSpec.js"></script>
-  <script type="text/javascript" src="spec/viewSpec.js"></script>
-  <script type="text/javascript" src="spec/viewCollectionSpec.js"></script>
+  <script type="text/javascript" src="spec/core/pubsubSpec.js"></script>
+  <script type="text/javascript" src="spec/core/routerSpec.js"></script>
+  <script type="text/javascript" src="spec/core/controllerSpec.js"></script>
+  <script type="text/javascript" src="spec/core/appSpec.js"></script>
+  <script type="text/javascript" src="spec/core/modelSpec.js"></script>
+  <script type="text/javascript" src="spec/core/viewSpec.js"></script>
 
 </head>
 
