start on templating engine

--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
     <script type="text/javascript" src="scripts/core/part.js"></script>
     <script type="text/javascript" src="scripts/core/pubsub.js"></script>
     <script type="text/javascript" src="scripts/core/router.js"></script>
+    <script type="text/javascript" src="scripts/core/template.js"></script>
     <script type="text/javascript" src="scripts/core/record.js"></script>
     <script type="text/javascript" src="scripts/core/view.js"></script>
     <script type="text/javascript" src="scripts/core/controller.js"></script>
     <script type="text/javascript" src="scripts/core/app.js"></script>
 
     <!-- parts -->
-    <script type="text/javascript" src="scripts/parts/home.js"></script>
-
     <!-- views -->
-    <script type="text/javascript" src="scripts/views/home.js"></script>
-
     <!-- controllers -->
     <script type="text/javascript" src="scripts/controllers/main.js"></script>
 
