--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- core -->
     <script type="text/javascript" src="scripts/core/util.js"></script>
     <script type="text/javascript" src="scripts/core/part.js"></script>
+    <script type="text/javascript" src="scripts/core/page.js"></script>
     <script type="text/javascript" src="scripts/core/pubsub.js"></script>
     <script type="text/javascript" src="scripts/core/router.js"></script>
     <script type="text/javascript" src="scripts/core/template.js"></script>
