--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
 
 <body>
 
+    <h1>Kordfu</h1>
+    <ul id="menu">
+        <li><a href="#/">Dashboard</a></li>
+        <li><a href="#/chords">Chords</a></li>
+        <li><a href="#/progressions">Progressions</a></li>
+        <li><a href="#/scales">Scales</a></li>
+        <li><a href="#/lyrics">Lyrics</a></li>
+        <li><a href="#/theory">Theory</a></li>
+    </ul>
     <div id="container"></div>
-    <a href="#">home</a>
-    <a href="#/page/one">one</a>
-    <a href="#/page/two">two</a>
-    <a href="#/page_three">three</a>
+
     <script type="text/javascript" src="scripts/kordfu.js"></script>
 
 </body>
