Create templating engine

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- vendor -->
     <script type="text/javascript" src="app/vendor/jquery.js"></script>
+    <script type="text/javascript" src="app/vendor/lodash.min.js"></script>
     <script type="text/javascript" src="app/vendor/teoria.js"></script>
 
     <!-- core -->
