--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="app/vendor/jquery.js"></script>
     <script type="text/javascript" src="app/vendor/lodash.min.js"></script>
     <script type="text/javascript" src="app/vendor/teoria.js"></script>
+    <script type="text/javascript" src="app/vendor/jtab.js"></script>
 
     <!-- core -->
     <script type="text/javascript" src="app/core/util.js"></script>
@@ -22,11 +23,14 @@
     <script type="text/javascript" src="app/core/app.js"></script>
 
     <!-- templates -->
+    <script type="text/javascript" src="app/jst/jst.js"></script>
     <script type="text/javascript" src="app/jst/chord_selector.js"></script>
     <script type="text/javascript" src="app/jst/chords.js"></script>
+    <script type="text/javascript" src="app/jst/chord_data.js"></script>
 
     <!-- parts -->
     <script type="text/javascript" src="app/parts/chord_selector.js"></script>
+    <script type="text/javascript" src="app/parts/chord_data.js"></script>
 
     <!-- controllers -->
     <script type="text/javascript" src="app/controllers/main.js"></script>
