--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script type="text/javascript" src="app/vendor/jquery.js"></script>
     <script type="text/javascript" src="app/vendor/lodash.min.js"></script>
     <script type="text/javascript" src="app/vendor/teoria.js"></script>
-    <script type="text/javascript" src="app/vendor/jtab.js"></script>
+
+    <!-- data -->
+    <script type="text/javascript" src="app/data/chords.js"></script>
 
     <!-- core -->
     <script type="text/javascript" src="app/core/util.js"></script>
