record to record listeners

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <script type="text/javascript" src="app/vendor/lodash.min.js"></script>
     <script type="text/javascript" src="app/vendor/teoria.js"></script>
 
-    <!-- data -->
-    <script type="text/javascript" src="app/data/chords.js"></script>
-
     <!-- core -->
     <script type="text/javascript" src="app/core/util.js"></script>
     <script type="text/javascript" src="app/core/part.js"></script>
@@ -23,6 +20,13 @@
     <script type="text/javascript" src="app/core/view.js"></script>
     <script type="text/javascript" src="app/core/controller.js"></script>
     <script type="text/javascript" src="app/core/app.js"></script>
+
+    <!-- data -->
+    <script type="text/javascript" src="app/data/chords.js"></script>
+
+    <!-- records -->
+    <script type="text/javascript" src="app/records/chord_data.js"></script>
+    <script type="text/javascript" src="app/records/chord_selector.js"></script>
 
     <!-- templates -->
     <script type="text/javascript" src="app/jst/jst.js"></script>
